--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,10 +45,6 @@ a {
   background-size: cover;
 }
 
-.menu-spacing {
-  margin-bottom: 2.5rem;
-}
-
 .header-menu nav {
   background: var(--menu-color);
   width: 100vw;
@@ -81,6 +77,7 @@ a {
 
 .bg-heading img {
   width: 100%;
+  margin-top: 2.5rem;
 }
 
 
